EjerParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 Ejer.g 2013-09-23 22:07:17

	import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class EjerParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ModificadorDeAcceso", "ID", "P", "OPrelacional", "ENT", "FLOT", "STRI", "WS", "'clase'", "'{'", "'}'", "'('", "')'", "','", "'cambio'", "'caso'", "':'", "'\"'", "';'", "'romper'", "'predeterminado'", "'si'", "'entonces'", "'contrario'", "'retorno'", "'ciclo'", "'++'", "'--'", "'mientras'", "'y'", "'o'", "'intentar'", "'finally'", "'captura'", "'e'", "'Exception'", "'NullReferenceException'", "'RuntimeException'", "'='", "'+'", "'-'", "'*'", "'entero'", "'flotante'", "'cadena'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int STRI=10;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int ENT=8;
    public static final int ID=5;
    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int ModificadorDeAcceso=4;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int P=6;
    public static final int OPrelacional=7;
    public static final int T__30=30;
    public static final int FLOT=9;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=11;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;

    // delegates
    // delegators


        public EjerParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public EjerParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return EjerParser.tokenNames; }
    public String getGrammarFileName() { return "Ejer.g"; }


    	public void displayRecognitionError(String[] tokenNames, RecognitionException e){    
       String hdr = getErrorHeader(e);  
       String msg = getErrorMessage(e, tokenNames);    
       System.out.println("Que te fijes!!!: " + hdr + " " + msg) ;
    }
    HashMap memory = new HashMap();



    // $ANTLR start "inicio"
    // Ejer.g:17:1: inicio : 'clase' ModificadorDeAcceso ID '{' ( declaraciones | metodo )* '}' ;
    public final void inicio() throws RecognitionException {
        try {
            // Ejer.g:17:9: ( 'clase' ModificadorDeAcceso ID '{' ( declaraciones | metodo )* '}' )
            // Ejer.g:17:11: 'clase' ModificadorDeAcceso ID '{' ( declaraciones | metodo )* '}'
            {
            match(input,12,FOLLOW_12_in_inicio30); if (state.failed) return ;
            match(input,ModificadorDeAcceso,FOLLOW_ModificadorDeAcceso_in_inicio32); if (state.failed) return ;
            match(input,ID,FOLLOW_ID_in_inicio35); if (state.failed) return ;
            match(input,13,FOLLOW_13_in_inicio37); if (state.failed) return ;
            // Ejer.g:17:46: ( declaraciones | metodo )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=46 && LA1_0<=48)) ) {
                    alt1=1;
                }
                else if ( (LA1_0==ModificadorDeAcceso) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // Ejer.g:17:47: declaraciones
            	    {
            	    pushFollow(FOLLOW_declaraciones_in_inicio39);
            	    declaraciones();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // Ejer.g:17:61: metodo
            	    {
            	    pushFollow(FOLLOW_metodo_in_inicio41);
            	    metodo();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,14,FOLLOW_14_in_inicio44); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "inicio"


    // $ANTLR start "metodo"
    // Ejer.g:20:1: metodo : ModificadorDeAcceso ( tipoEnt | tipoFlot | tipoString ) ID '(' ( argumentos )* ')' '{' ( instrucciones )+ '}' ;
    public final void metodo() throws RecognitionException {
        try {
            // Ejer.g:20:9: ( ModificadorDeAcceso ( tipoEnt | tipoFlot | tipoString ) ID '(' ( argumentos )* ')' '{' ( instrucciones )+ '}' )
            // Ejer.g:20:11: ModificadorDeAcceso ( tipoEnt | tipoFlot | tipoString ) ID '(' ( argumentos )* ')' '{' ( instrucciones )+ '}'
            {
            match(input,ModificadorDeAcceso,FOLLOW_ModificadorDeAcceso_in_metodo56); if (state.failed) return ;
            // Ejer.g:20:31: ( tipoEnt | tipoFlot | tipoString )
            int alt2=3;
            switch ( input.LA(1) ) {
            case 46:
                {
                alt2=1;
                }
                break;
            case 47:
                {
                alt2=2;
                }
                break;
            case 48:
                {
                alt2=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // Ejer.g:20:32: tipoEnt
                    {
                    pushFollow(FOLLOW_tipoEnt_in_metodo59);
                    tipoEnt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Ejer.g:20:40: tipoFlot
                    {
                    pushFollow(FOLLOW_tipoFlot_in_metodo61);
                    tipoFlot();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // Ejer.g:20:49: tipoString
                    {
                    pushFollow(FOLLOW_tipoString_in_metodo63);
                    tipoString();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }

            match(input,ID,FOLLOW_ID_in_metodo66); if (state.failed) return ;
            match(input,15,FOLLOW_15_in_metodo68); if (state.failed) return ;
            // Ejer.g:20:68: ( argumentos )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=46 && LA3_0<=48)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Ejer.g:0:0: argumentos
            	    {
            	    pushFollow(FOLLOW_argumentos_in_metodo70);
            	    argumentos();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            match(input,16,FOLLOW_16_in_metodo73); if (state.failed) return ;
            match(input,13,FOLLOW_13_in_metodo75); if (state.failed) return ;
            // Ejer.g:20:87: ( instrucciones )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID||LA4_0==18||LA4_0==25||(LA4_0>=28 && LA4_0<=29)||LA4_0==32||LA4_0==35||(LA4_0>=46 && LA4_0<=48)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // Ejer.g:0:0: instrucciones
            	    {
            	    pushFollow(FOLLOW_instrucciones_in_metodo76);
            	    instrucciones();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);

            match(input,14,FOLLOW_14_in_metodo78); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "metodo"


    // $ANTLR start "argumentos"
    // Ejer.g:23:1: argumentos : ( declInt | declFlot | declString ) ( ',' ( declInt | declFlot | declString ) )* ;
    public final void argumentos() throws RecognitionException {
        try {
            // Ejer.g:23:12: ( ( declInt | declFlot | declString ) ( ',' ( declInt | declFlot | declString ) )* )
            // Ejer.g:23:14: ( declInt | declFlot | declString ) ( ',' ( declInt | declFlot | declString ) )*
            {
            // Ejer.g:23:14: ( declInt | declFlot | declString )
            int alt5=3;
            switch ( input.LA(1) ) {
            case 46:
                {
                alt5=1;
                }
                break;
            case 47:
                {
                alt5=2;
                }
                break;
            case 48:
                {
                alt5=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // Ejer.g:23:15: declInt
                    {
                    pushFollow(FOLLOW_declInt_in_argumentos90);
                    declInt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Ejer.g:23:23: declFlot
                    {
                    pushFollow(FOLLOW_declFlot_in_argumentos92);
                    declFlot();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // Ejer.g:23:32: declString
                    {
                    pushFollow(FOLLOW_declString_in_argumentos94);
                    declString();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }

            // Ejer.g:23:44: ( ',' ( declInt | declFlot | declString ) )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==17) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // Ejer.g:23:45: ',' ( declInt | declFlot | declString )
            	    {
            	    match(input,17,FOLLOW_17_in_argumentos98); if (state.failed) return ;
            	    // Ejer.g:23:49: ( declInt | declFlot | declString )
            	    int alt6=3;
            	    switch ( input.LA(1) ) {
            	    case 46:
            	        {
            	        alt6=1;
            	        }
            	        break;
            	    case 47:
            	        {
            	        alt6=2;
            	        }
            	        break;
            	    case 48:
            	        {
            	        alt6=3;
            	        }
            	        break;
            	    default:
            	        if (state.backtracking>0) {state.failed=true; return ;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 6, 0, input);

            	        throw nvae;
            	    }

            	    switch (alt6) {
            	        case 1 :
            	            // Ejer.g:23:50: declInt
            	            {
            	            pushFollow(FOLLOW_declInt_in_argumentos101);
            	            declInt();

            	            state._fsp--;
            	            if (state.failed) return ;

            	            }
            	            break;
            	        case 2 :
            	            // Ejer.g:23:58: declFlot
            	            {
            	            pushFollow(FOLLOW_declFlot_in_argumentos103);
            	            declFlot();

            	            state._fsp--;
            	            if (state.failed) return ;

            	            }
            	            break;
            	        case 3 :
            	            // Ejer.g:23:67: declString
            	            {
            	            pushFollow(FOLLOW_declString_in_argumentos105);
            	            declString();

            	            state._fsp--;
            	            if (state.failed) return ;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "argumentos"


    // $ANTLR start "instrucciones"
    // Ejer.g:26:1: instrucciones : ( declaraciones | asignacion | cambiar | ciclos | ifelse | ret | sis | bloque );
    public final void instrucciones() throws RecognitionException {
        try {
            // Ejer.g:26:14: ( declaraciones | asignacion | cambiar | ciclos | ifelse | ret | sis | bloque )
            int alt8=8;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // Ejer.g:26:16: declaraciones
                    {
                    pushFollow(FOLLOW_declaraciones_in_instrucciones121);
                    declaraciones();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Ejer.g:26:31: asignacion
                    {
                    pushFollow(FOLLOW_asignacion_in_instrucciones124);
                    asignacion();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // Ejer.g:26:44: cambiar
                    {
                    pushFollow(FOLLOW_cambiar_in_instrucciones128);
                    cambiar();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    // Ejer.g:26:54: ciclos
                    {
                    pushFollow(FOLLOW_ciclos_in_instrucciones132);
                    ciclos();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 5 :
                    // Ejer.g:26:63: ifelse
                    {
                    pushFollow(FOLLOW_ifelse_in_instrucciones136);
                    ifelse();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 6 :
                    // Ejer.g:26:72: ret
                    {
                    pushFollow(FOLLOW_ret_in_instrucciones140);
                    ret();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 7 :
                    // Ejer.g:26:78: sis
                    {
                    pushFollow(FOLLOW_sis_in_instrucciones144);
                    sis();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 8 :
                    // Ejer.g:26:84: bloque
                    {
                    pushFollow(FOLLOW_bloque_in_instrucciones148);
                    bloque();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "instrucciones"


    // $ANTLR start "cambiar"
    // Ejer.g:29:1: cambiar : 'cambio' '(' expr ')' '{' ( 'caso' ID ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones )* 'romper' ';' )+ ( 'predeterminado' ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones | cond )* 'romper' ';' )? '}' ;
    public final void cambiar() throws RecognitionException {
        try {
            // Ejer.g:29:10: ( 'cambio' '(' expr ')' '{' ( 'caso' ID ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones )* 'romper' ';' )+ ( 'predeterminado' ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones | cond )* 'romper' ';' )? '}' )
            // Ejer.g:29:12: 'cambio' '(' expr ')' '{' ( 'caso' ID ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones )* 'romper' ';' )+ ( 'predeterminado' ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones | cond )* 'romper' ';' )? '}'
            {
            match(input,18,FOLLOW_18_in_cambiar160); if (state.failed) return ;
            match(input,15,FOLLOW_15_in_cambiar161); if (state.failed) return ;
            pushFollow(FOLLOW_expr_in_cambiar163);
            expr();

            state._fsp--;
            if (state.failed) return ;
            match(input,16,FOLLOW_16_in_cambiar164); if (state.failed) return ;
            match(input,13,FOLLOW_13_in_cambiar166); if (state.failed) return ;
            // Ejer.g:29:36: ( 'caso' ID ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones )* 'romper' ';' )+
            int cnt10=0;
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==19) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // Ejer.g:29:37: 'caso' ID ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones )* 'romper' ';'
            	    {
            	    match(input,19,FOLLOW_19_in_cambiar169); if (state.failed) return ;
            	    match(input,ID,FOLLOW_ID_in_cambiar171); if (state.failed) return ;
            	    match(input,20,FOLLOW_20_in_cambiar173); if (state.failed) return ;
            	    match(input,ID,FOLLOW_ID_in_cambiar175); if (state.failed) return ;
            	    match(input,15,FOLLOW_15_in_cambiar176); if (state.failed) return ;
            	    match(input,21,FOLLOW_21_in_cambiar177); if (state.failed) return ;
            	    match(input,ID,FOLLOW_ID_in_cambiar178); if (state.failed) return ;
            	    match(input,21,FOLLOW_21_in_cambiar179); if (state.failed) return ;
            	    match(input,16,FOLLOW_16_in_cambiar180); if (state.failed) return ;
            	    match(input,22,FOLLOW_22_in_cambiar182); if (state.failed) return ;
            	    // Ejer.g:29:72: ( instrucciones )*
            	    loop9:
            	    do {
            	        int alt9=2;
            	        int LA9_0 = input.LA(1);

            	        if ( (LA9_0==ID||LA9_0==18||LA9_0==25||(LA9_0>=28 && LA9_0<=29)||LA9_0==32||LA9_0==35||(LA9_0>=46 && LA9_0<=48)) ) {
            	            alt9=1;
            	        }


            	        switch (alt9) {
            	    	case 1 :
            	    	    // Ejer.g:0:0: instrucciones
            	    	    {
            	    	    pushFollow(FOLLOW_instrucciones_in_cambiar184);
            	    	    instrucciones();

            	    	    state._fsp--;
            	    	    if (state.failed) return ;

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop9;
            	        }
            	    } while (true);

            	    match(input,23,FOLLOW_23_in_cambiar187); if (state.failed) return ;
            	    match(input,22,FOLLOW_22_in_cambiar189); if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt10 >= 1 ) break loop10;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(10, input);
                        throw eee;
                }
                cnt10++;
            } while (true);

            // Ejer.g:30:1: ( 'predeterminado' ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones | cond )* 'romper' ';' )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==24) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // Ejer.g:30:2: 'predeterminado' ':' ID '(' '\"' ID '\"' ')' ';' ( instrucciones | cond )* 'romper' ';'
                    {
                    match(input,24,FOLLOW_24_in_cambiar195); if (state.failed) return ;
                    match(input,20,FOLLOW_20_in_cambiar197); if (state.failed) return ;
                    match(input,ID,FOLLOW_ID_in_cambiar199); if (state.failed) return ;
                    match(input,15,FOLLOW_15_in_cambiar200); if (state.failed) return ;
                    match(input,21,FOLLOW_21_in_cambiar201); if (state.failed) return ;
                    match(input,ID,FOLLOW_ID_in_cambiar202); if (state.failed) return ;
                    match(input,21,FOLLOW_21_in_cambiar203); if (state.failed) return ;
                    match(input,16,FOLLOW_16_in_cambiar204); if (state.failed) return ;
                    match(input,22,FOLLOW_22_in_cambiar206); if (state.failed) return ;
                    // Ejer.g:30:44: ( instrucciones | cond )*
                    loop11:
                    do {
                        int alt11=3;
                        int LA11_0 = input.LA(1);

                        if ( (LA11_0==ID||LA11_0==18||LA11_0==25||(LA11_0>=28 && LA11_0<=29)||LA11_0==32||LA11_0==35||(LA11_0>=46 && LA11_0<=48)) ) {
                            alt11=1;
                        }
                        else if ( (LA11_0==15) ) {
                            alt11=2;
                        }


                        switch (alt11) {
                    	case 1 :
                    	    // Ejer.g:30:45: instrucciones
                    	    {
                    	    pushFollow(FOLLOW_instrucciones_in_cambiar209);
                    	    instrucciones();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;
                    	case 2 :
                    	    // Ejer.g:30:61: cond
                    	    {
                    	    pushFollow(FOLLOW_cond_in_cambiar213);
                    	    cond();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop11;
                        }
                    } while (true);

                    match(input,23,FOLLOW_23_in_cambiar217); if (state.failed) return ;
                    match(input,22,FOLLOW_22_in_cambiar219); if (state.failed) return ;

                    }
                    break;

            }

            match(input,14,FOLLOW_14_in_cambiar222); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "cambiar"


    // $ANTLR start "ciclos"
    // Ejer.g:32:1: ciclos : ( para | while1 );
    public final void ciclos() throws RecognitionException {
        try {
            // Ejer.g:32:9: ( para | while1 )
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==29) ) {
                alt13=1;
            }
            else if ( (LA13_0==32) ) {
                alt13=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;
            }
            switch (alt13) {
                case 1 :
                    // Ejer.g:32:11: para
                    {
                    pushFollow(FOLLOW_para_in_ciclos232);
                    para();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Ejer.g:32:18: while1
                    {
                    pushFollow(FOLLOW_while1_in_ciclos236);
                    while1();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "ciclos"


    // $ANTLR start "ifelse"
    // Ejer.g:35:1: ifelse : 'si' cond 'entonces' ( cuerpo | instrucciones ) ( 'contrario' ( cuerpo | instrucciones ) )? ;
    public final void ifelse() throws RecognitionException {
        try {
            // Ejer.g:35:9: ( 'si' cond 'entonces' ( cuerpo | instrucciones ) ( 'contrario' ( cuerpo | instrucciones ) )? )
            // Ejer.g:35:11: 'si' cond 'entonces' ( cuerpo | instrucciones ) ( 'contrario' ( cuerpo | instrucciones ) )?
            {
            match(input,25,FOLLOW_25_in_ifelse248); if (state.failed) return ;
            pushFollow(FOLLOW_cond_in_ifelse250);
            cond();

            state._fsp--;
            if (state.failed) return ;
            match(input,26,FOLLOW_26_in_ifelse252); if (state.failed) return ;
            // Ejer.g:35:32: ( cuerpo | instrucciones )
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==13) ) {
                alt14=1;
            }
            else if ( (LA14_0==ID||LA14_0==18||LA14_0==25||(LA14_0>=28 && LA14_0<=29)||LA14_0==32||LA14_0==35||(LA14_0>=46 && LA14_0<=48)) ) {
                alt14=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 14, 0, input);

                throw nvae;
            }
            switch (alt14) {
                case 1 :
                    // Ejer.g:35:33: cuerpo
                    {
                    pushFollow(FOLLOW_cuerpo_in_ifelse255);
                    cuerpo();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Ejer.g:35:40: instrucciones
                    {
                    pushFollow(FOLLOW_instrucciones_in_ifelse257);
                    instrucciones();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }

            // Ejer.g:35:55: ( 'contrario' ( cuerpo | instrucciones ) )?
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==27) ) {
                int LA16_1 = input.LA(2);

                if ( (synpred27_Ejer()) ) {
                    alt16=1;
                }
            }
            switch (alt16) {
                case 1 :
                    // Ejer.g:35:56: 'contrario' ( cuerpo | instrucciones )
                    {
                    match(input,27,FOLLOW_27_in_ifelse261); if (state.failed) return ;
                    // Ejer.g:35:68: ( cuerpo | instrucciones )
                    int alt15=2;
                    int LA15_0 = input.LA(1);

                    if ( (LA15_0==13) ) {
                        alt15=1;
                    }
                    else if ( (LA15_0==ID||LA15_0==18||LA15_0==25||(LA15_0>=28 && LA15_0<=29)||LA15_0==32||LA15_0==35||(LA15_0>=46 && LA15_0<=48)) ) {
                        alt15=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 15, 0, input);

                        throw nvae;
                    }
                    switch (alt15) {
                        case 1 :
                            // Ejer.g:35:69: cuerpo
                            {
                            pushFollow(FOLLOW_cuerpo_in_ifelse264);
                            cuerpo();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;
                        case 2 :
                            // Ejer.g:35:76: instrucciones
                            {
                            pushFollow(FOLLOW_instrucciones_in_ifelse266);
                            instrucciones();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;

                    }


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "ifelse"


    // $ANTLR start "ret"
    // Ejer.g:38:1: ret : 'retorno' atomo ';' ;
    public final void ret() throws RecognitionException {
        try {
            // Ejer.g:38:6: ( 'retorno' atomo ';' )
            // Ejer.g:38:8: 'retorno' atomo ';'
            {
            match(input,28,FOLLOW_28_in_ret280); if (state.failed) return ;
            pushFollow(FOLLOW_atomo_in_ret282);
            atomo();

            state._fsp--;
            if (state.failed) return ;
            match(input,22,FOLLOW_22_in_ret284); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "ret"

